fix(core): Enforce text alignment of legend popup in the styles (#203)
168

--- a/packages/core/src/style.scss
+++ b/packages/core/src/style.scss
@@ -192,6 +192,7 @@ div.chart-holder {
 			right: 10px;
 		}
 		.legend-tooltip-content {
+			text-align: left;
 			padding: 0 7px 15px 7px;
 		}
 	}
